--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@types/jest": "^26.0.3",
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.41",
+    "@types/react-autosuggest": "^9.3.14",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.0",
     "react": "^16.13.1",
+    "react-autosuggest": "^10.0.2",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
